--- a/src/assets/sass/_bases.scss
+++ b/src/assets/sass/_bases.scss
@@ -1,3 +1,5 @@
+@use 'media-queries' as *;
+
 * {
     margin: 0;
     padding: 0;
@@ -17,6 +19,14 @@ body {
     background: var(--white);
     color: var(--wenge-brown);
     font-family: var(--outfit);
+
+    @include lg {
+        background: var(--eggshell);
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
 }
 
 h1 {
